# fastapi-eventsourcing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: ci-cd.yml
src/: main.py
src/domain/: models.py  repositories.py
src/graphql/: schema.py
tests/: conftest.py
tests/domain/: test_lease_model.py  test_tenant_model.py  test_unit_model.py  test_unit_repository.py
tests/graphql/: conftest.py  test_lease_api.py  test_tenant_api.py  test_unit_api.py
